--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,44 @@ body {
 
 .outer-container {
     display: flex;
-    background-color: hsl(0,0%,85%);
+    background-color: hsl(0,0%,95%);
+    padding: 5px;
+    border-radius: 20px 20px 45px 45px;
+    box-shadow: 0 5px 50px 0px hsla(0,0%,20%,0.6);
 }
 
 .inner-container {
     display: flex;
     flex-direction: column;
+    background-color: hsl(0,0%,95%);
+    padding: 5px;
+    border-radius: 15px 15px 40px 40px;
+    box-shadow: 0 5px 5px 0px hsla(0,0%,0%,0.25);
+}
+
+.calc-area {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    background-color: hsl(30,30%,15%);
+    margin: 12px 12px 0px;
+    padding: 10px;
+    min-height: 80px;
+    border-radius: 20px;
+    box-shadow: inset -4px 4px 8px 2px hsla(0,0%,80%, 0.25), inset 5px -5px 5px 0px hsla(30,30%,10%, 0.75);
+    color: hsl(0,0%,85%);
+}
+
+.previous-calc {
+    font-size: 0.8em;
+    color: hsl(0,0%,75%);
+    padding: 0 10px;
+}
+
+.current-calc {
+    font-size: 1.6em;
+    padding: 0 10px;
 }
 
 .keys {
@@ -36,6 +68,11 @@ body {
     border: none;
     background-color: hsl(0,0%,95%);
     box-shadow: 0 4px 4px rgba(0,0,0,0.25), 0 0 5px 1px rgba(255,255,255,0.75), inset -5px 10px 1px rgba(48,95,107, 0.2);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 800;
+    font-size: 1.2em;
+    color: hsl(0,0%,45%);
+    text-shadow: 0px 1px 2px hsl(0,0%,40%);
 }
 
 .operand {
@@ -55,6 +92,10 @@ body {
 .enter {
     background-color: hsl(25,33%,65%);
     grid-row: span 2;
+}
+
+.enter:hover {
+    background-color: hsl(25,33%,55%)
 }
 
 .zero {
