--- a/styles.css
+++ b/styles.css
@@ -33,12 +33,11 @@ body {
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
-    margin: 12px 12px 0px;
+    margin: 20px 24px 0px;
     padding: 10px;
     min-height: 80px;
-    border-radius: 20px;
-    box-shadow: 0 -2px 4px 4px hsla(0,0%,20%, 0.25), inset -4px 4px 8px 2px hsla(0,0%,80%, 0.25), inset 5px -5px 5px 0px hsla(30,30%,10%, 0.75);
-
+    border-radius: 10px;
+    box-shadow: 0 0px 1px 5px hsla(0,0%,20%, 0.25), inset -4px 4px 8px 2px hsla(0,0%,80%, 0.25), inset 5px -5px 5px 0px hsla(30,30%,10%, 0.75);
     background-color: hsl(30,30%,15%);
     background: 
     repeating-linear-gradient( 
@@ -77,9 +76,13 @@ body {
     min-width: 60px;
     border-radius: 30px;
     border: none;
-    background-color: hsl(0,0%,95%);
-    box-shadow: 0 4px 4px rgba(0,0,0,0.25), 0 0 5px 1px rgba(255,255,255,0.75), inset -5px 10px 1px rgba(48,95,107, 0.2);
-    font-family: Orbitron, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: hsl(10,10%,90%);
+    box-shadow: 
+        0 4px 4px 1px rgba(0,0,0,0.25), 
+        0 0 8px 1px rgba(255,255,255,0.75), 
+        inset -4px 8px 1px 1px hsla(0,0%,15%, 0.15);
+    font-family: 
+        Orbitron, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 800;
     font-size: 1.2em;
     color: hsl(0,0%,45%);
@@ -88,7 +91,10 @@ body {
 
 .operator {
     background-color: hsl(176,19%,73%);
-    box-shadow: 0 4px 4px rgba(0,0,0,0.25), 0 0 5px 1px rgba(255,255,255,0.75), inset -5px 10px 1px rgba(40,95,107, 0.2);
+    box-shadow: 
+        0 4px 4px rgba(0,0,0,0.25), 
+        0 0 5px 1px rgba(255,255,255,0.75), 
+        inset -5px 10px 1px rgba(40,95,107, 0.2);
 }
 
 .enter {
