--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,10 @@ body {
 .calc-area {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
     align-items: flex-end;
+    justify-content: space-around;
     margin: 20px 24px 0px;
-    padding: 10px;
+    padding: 5px;
     min-height: 80px;
     border-radius: 10px;
     box-shadow: 0 0px 1px 5px hsla(0,0%,20%, 0.25), inset -4px 4px 8px 2px hsla(0,0%,80%, 0.25), inset 5px -5px 5px 0px hsla(30,30%,10%, 0.75);
@@ -50,16 +50,14 @@ body {
 }
 
 .previous-calc {
-    font-size: 0.8em;
+    font-size: 0.9em;
     color: hsl(0,0%,55%);
-    padding: 0 10px;
     text-shadow: 0px 0.5px 1px hsla(0,0%,80%, 0.5);
 }
 
 .current-calc {
     font-size: 1.6em;
     color: hsl(0,0%,75%);
-    padding: 0 10px;
     text-shadow: 0px 1px 2px hsla(0,0%,80%, 0.5);
 }
 
