--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,8 @@ body {
 .inner-container {
     display: flex;
     flex-direction: column;
+    justify-items: stretch;
+    align-items: stretch;
     background-color: hsl(0,0%,95%);
     padding: 5px;
     border-radius: 15px 15px 40px 40px;
@@ -32,10 +34,11 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    justify-content: space-around;
+    justify-content: space-between;
     margin: 20px 24px 0px;
     padding: 5px;
     min-height: 80px;
+    max-width: 262px;
     border-radius: 10px;
     box-shadow: 0 0px 1px 5px hsla(0,0%,20%, 0.25), inset -4px 4px 8px 2px hsla(0,0%,80%, 0.25), inset 5px -5px 5px 0px hsla(30,30%,10%, 0.75);
     background-color: hsl(30,30%,15%);
@@ -47,6 +50,8 @@ body {
         hsl(30,30%,11%) 10px, 
         hsl(30,30%,11%) 11px
     );
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .previous-calc {
